client/src/components/clubs/club-popup.scss
/**
 * This is the most complex popup component, with a tab that switches betwwen
 * viewing execs and committees.
 * 
 * 1) The two views (execs and committees) can be toggled by tabs above that section
 * 2) The edit button is below this section and will open the editing menu
 * 3) The cover photo is exactly 864 x 378 (which is a 48:21 ratio or 24rem x 10.5rem)
 */

@import '../../custom.scss';

.club-popup {
    width: 24rem;
    background-color: $background;
    text-align: center;
}

.club-popup-loading {
    padding: 1rem;
    width: min-content;
    text-align: center;
}

/*
 * ######################
 * ##### POPUP INFO #####
 * ######################
 */

// Set scale ratio for the image
.club-popup-image {
    width: 24rem;
    height: 10.5rem;
    display: block;
    object-fit: cover;

    background-color: $background-tint;
    color: $background-tint;
}

.club-popup-advised {
    margin-top: 0.25rem;
    font-family: $title-font;
    font-weight: 300;
    color: $primary;
}

.club-popup-advised.inactive {
    color: $type-signup;
    display: block;
}

.club-popup-name {
    padding: 0 0.75rem;
    font-size: 1.45rem;
    font-weight: 300;
    font-family: $title-font;
}

.club-popup-description {
    padding: 0.5rem 1.75rem;
    font-family: $alt-font;
    font-size: 0.5rem;
    white-space: pre-line;
}

/*
 * #################
 * ##### LINKS #####
 * #################
 */

.club-popup-link {
    width: fit-content;
    margin: auto;

    color: $text-light;
    font-size: 0.7rem;
    text-decoration: underline;

    cursor: pointer;
    transition: 0.2s;
}

.club-popup-link:hover {
    color: $primary;
}

/*
 * ###################################
 * ##### EXEC AND COMMITTEE TABS #####
 * ###################################
 */

.club-popup-tab-container {
    flex-direction: row;
    justify-content: center;

    display: flex;
    margin-top: 0.75rem;
    margin-bottom: 0.5rem;
}

.club-popup-tab-item {
    margin: 0 1.5rem;
    font-family: $title-font;
    font-weight: 300;
    color: $text-light;
    transition: 0.2s;
    cursor: pointer;
}

// Override the default inactive behavior (display: none)
.club-popup-tab-item.inactive {
    display: block !important;
}

.club-popup-tab-item.active,
.club-popup-tab-item:hover {
    color: $primary;
}

.club-popup-committees-list {
    grid-template-columns: repeat(auto-fill, 10rem);
    gap: 1rem;
    justify-content: center;

    display: grid !important;
    margin: auto;
    margin-bottom: 1rem;
}

.club-popup-tab-empty {
    margin-bottom: 0.5rem;
    font-family: $title-font;
    text-align: center;
    color: $text-light;
}

.club-popup-edit-button {
    margin-bottom: 0.5rem;
}

/*
 * #########################
 * ##### MEDIA QUERIES #####
 * #########################
 */

@include media-phone-down {
    .club-popup {
        height: 90vh;
        width: 100%;
    }

    .club-popup-view {
        width: 100%;
        padding-bottom: 3rem;
    }

    // TODO: This does not keep the scale ratio
    .club-popup-image {
        width: 100%;
        height: 7rem;
    }

    .club-popup-advised,
    .club-popup-name,
    .club-popup-description {
        width: 95vw;
        padding-left: 0;
        padding-right: 0;
        margin: 0 auto;
        font-size: 0.65rem;
    }

    .club-popup-name {
        font-size: 1.25rem;
    }

    .club-popup-advised {
        margin-top: 0.5rem;
    }

    .club-popup-edit-button {
        display: none;
    }

    .club-popup-tab-item {
        font-size: 1.25rem;
    }

    .club-popup-committees {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

